// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="sc-ibkoSk jfhBOs"
>
  <ul
    className="sc-keiIcO sc-laFCIP iwmlSR csfESm"
  >
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        0
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        2
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        3
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        4
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        5
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        6
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        7
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        8
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        9
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        10
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        11
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        12
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        13
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        14
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        15
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        16
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        17
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        18
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        19
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        20
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        21
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        22
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        23
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-kwMEKh kQGLja"
      >
        24
      </div>
    </li>
  </ul>
</div>
`;

exports[`Carousel renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-ibkoSk jfhBOs"
  >
    <ul
      className="sc-keiIcO sc-laFCIP iwmlSR csfESm"
    >
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          24
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          23
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          22
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          21
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          20
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          19
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          18
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          17
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          16
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          15
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          14
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          13
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          12
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          11
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          10
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          9
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          8
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          7
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          6
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          5
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          4
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          3
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          2
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          1
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-izdjZO buRfqR"
        >
          0
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="sc-ibkoSk jfhBOs"
>
  <ul
    className="sc-keiIcO sc-laFCIP elUtjp csfESm"
  >
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bsCzJh ccVCMe"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bsCzJh ccVCMe"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bsCzJh ccVCMe"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bsCzJh ccVCMe"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bsCzJh ccVCMe"
      >
        -1
        , 
        -1
      </div>
    </li>
  </ul>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="sc-ibkoSk jfhBOs"
>
  <button
    disabled={true}
    onClick={[Function]}
  >
    Scroll to left
  </button>
  <ul
    className="sc-keiIcO sc-laFCIP iwmlSR csfESm"
  >
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        0
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        2
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        3
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        4
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        5
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        6
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        7
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        8
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        9
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        10
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        11
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        12
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        13
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        14
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        15
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        16
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        17
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        18
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        19
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        20
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        21
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        22
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        23
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-gKsSvo EHveJ"
      >
        24
      </div>
    </li>
  </ul>
  <button
    disabled={true}
    onClick={[Function]}
  >
    Scroll to Right
  </button>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="sc-ibkoSk jfhBOs"
>
  <ul
    className="sc-keiIcO sc-laFCIP elUtjp csfESm"
  >
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-dhmRnH bQzYa-d"
      >
        0
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-dhmRnH bQzYa-d"
      >
        1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-dhmRnH bQzYa-d"
      >
        2
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-dhmRnH bQzYa-d"
      >
        3
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-dhmRnH bQzYa-d"
      >
        4
      </div>
    </li>
  </ul>
</div>
`;
